--- a/video05/index.html
+++ b/video05/index.html
@@ -11,7 +11,7 @@
 			gap: 20px;
 			grid-template-columns: 200px 200px; /* Explicity declarate 2 columns */
 			grid-template-rows: 50px 100px 200px; /* Explicity declarate 3 rows */
-			grid-auto-rows: 70px 300px; /* Defines dthe default ehavior of any implicit row created. Because we have two values, this becomes a repeat pattern */
+			grid-auto-rows: 70px 300px; /* Defines the default behavior of any implicit row created. Because we have two values, this becomes a repeat pattern */
 			/* grid-auto-columns: VALUE; */ /* It's possible to define default value to columns as well. Here this will not be effective because the default behavior is increase number of rows */
 		}
 	</style>
